--- a/index.html
+++ b/index.html
@@ -10,23 +10,21 @@
 <body>
     <div class="wrapper">
         <header>
-            <section class="text">
+            <div class="text">
                 <h1>Heijin's <br> Webfolio</h1>
                 <div id="highlight"></div>
-            </section>
+            </div>
             
             <nav>
-                <a nav="projects.html#to-do-list" id = "to-do-list">TO-DO LIST</a>
-                <a nav="projects.html#weather-app" id = "weather-app">WEATHER APP</a>
-                <a nav="projects.html#image-gallery" id = "image-gallery">IMAGE GALLERY</a>
-                <a nav="projects.html#recipe-finder" id = "recipe-finder">RECIPE FINDER</a>
+                <a href="projects.html" id="to-do-list">TO-DO LIST</a>
+                <a href="projects.html#tic-tac-toe-project" id="weather-app">TIC-TAC-TOE-GAME</a>
             </nav>
         </header>
 
         <div class="about-me">
             <section class="intro">
                 <h1>About Me</h1>
-                <h2>Hey there! I'm Heijin, an aspiring programmer on a 
+                <h2>Hey there! I'm Heijin, an programmer on a 
                     journey to turn lines of code into innovative solutions. Here's a bit about me:</h2>
             </section>
             <div class="box">
