Added new project

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             
             <nav>
                 <a href="projects.html" id="to-do-list">TO-DO LIST</a>
+                <a href="projects.html#sudoku-generator-project" id="sudoku-generator">SUDOKU GENERATOR</a>
                 <a href="projects.html#tic-tac-toe-project" id="weather-app">TIC-TAC-TOE-GAME</a>
             </nav>
         </header>
